# aktualizr

./: .gitmodules  CMakeLists.txt  actions.md
config/sql/: schema.sql
config/sql/migration/: migrate.10.sql
partial/: CMakeLists.txt
partial/libuptiny/: targets.c
partial/tests/: afl-wrapper.cc
scripts/: build_ubuntu.sh  test_aktualizr_deb_ubuntu.sh  test_aktualizr_repo.sh
src/: crypto.h
src/aktualizr_repo/run/: create_repo.sh
src/aktualizr_secondary/: uptane_test.cc
src/cert_provider/: CMakeLists.txt  cert_provider_test.cc  main.cc
src/libaktualizr/: CMakeLists.txt
src/libaktualizr/bootloader/: bootloader.cc  bootloader.h
src/libaktualizr/config/: config.cc  config.h
src/libaktualizr/package_manager/: debianmanager.h  debianmanager_test.cc  ostreemanager.cc  ostreemanager.h  packagemanagerinterface.h
src/libaktualizr/primary/: aktualizr.cc  sotauptaneclient.cc  sotauptaneclient.h
src/libaktualizr/storage/: invstorage.h  sqlstorage.cc  sqlstorage.h  sqlstorage_base.cc  sqlstorage_base.h  storage_common_test.cc
src/libaktualizr/uptane/: CMakeLists.txt  fetcher.cc  secondaryconfig.h  secondaryfactory.h  uptane_ci_test.cc  uptane_key_test.cc  uptane_serial_test.cc  uptane_test.cc
